projects/event-management/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-management
  labels:
    app: event-management
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: event-management
